syntax = "proto3";

package protofile;

option go_package = "models/proto";

message Metric {
  string id = 1;              // имя метрики//
  enum MetricType {
    GAUGE = 0;
    COUNTER = 1;
  }
  MetricType mType = 2;       // параметр, принимающий значение gauge или counter
  sint64 delta = 3;           // значение метрики в случае передачи counter
  double Value = 4;           // значение метрики в случае передачи gauge
}

message AddMetricRequest {
  Metric metric = 1;
  bytes Body = 2;
}

message AddMetricResponse {
  Metric metric = 1;
}

message AddMetricsRequest {
  repeated Metric metrics = 1;
  bytes Body = 2;
}

message AddMetricsResponse {
  int64 count = 1;
}

service Metrics {
  rpc AddMetric(AddMetricRequest) returns (AddMetricResponse);
  rpc AddMetricBatch(AddMetricsRequest) returns (AddMetricsResponse);
}